<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="button_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="button_scores_app">SCORES APP</string>
    <string name="button_library_app">LIBRARY APP</string>
    <string name="button_build_it_bigger_app">BUILD IT BIGGER</string>
    <string name="button_xyz_reader">XYZ READER</string>
    <string name="button_capstone_app">CAPSTONE: MY OWN APP</string>
    <string name="button_message">This button will launch my %1$s app!</string>
</resources>
