<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />

    <Button
        android:text="@string/button_spotify_streamer"
        android:id="@+id/button"
        android:layout_marginTop="25dp"
        android:onClick="onButtonClicked"
        android:textColor="#000000"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape1"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:text="@string/button_scores_app"
        android:id="@+id/button2"
        android:onClick="onButtonClicked"
        android:textColor="#000000"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:text="@string/button_library_app"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:onClick="onButtonClicked"
        android:textColor="#000000"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape1"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:text="@string/button_build_it_bigger_app"
        android:id="@+id/button4"
        android:layout_marginTop="10dp"
        android:onClick="onButtonClicked"
        android:textColor="#000000"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape1"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button_xyz_reader"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:onClick="onButtonClicked"
        android:textColor="#000000"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape1"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button_capstone_app"
        android:id="@+id/button6"
        android:layout_marginTop="10dp"
        android:onClick="onButtonClicked"
        android:textColor="#FFFFFF"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape2"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
